--- a/src/components/select/index.module.scss
+++ b/src/components/select/index.module.scss
@@ -2,7 +2,7 @@
   width: 400px;
   margin: 0 auto;
 
-  &-title {
+  &_title {
     margin-top: 0;
     margin-bottom: 4px;
     font-family: 'Inter', sans-serif;
